--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@500;600&display=swap");
+:root {
+  --dark: #1e2329;
+  --light: #fafafa;
+  --success: #03a66d;
+  --danger: #cf304a;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+  font-family: "Open Sans", sans-serif;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.name,
+.loading-text {
+  color: var(--light);
+  font-size: 16px;
+  font-weight: 600;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.fullname {
+  color: #b6b6b6;
+  font-size: 14px;
+  margin-top: 3px;
+  font-weight: 500;
+}
+.item {
+  display: flex;
+  align-items: center;
+  padding: 12px 0px;
+  border-bottom: 1px solid #949191;
+}
+.item:first-child {
+  padding-top: 0px;
+}
+.item:last-child {
+  padding-bottom: 0px;
+  border-bottom: 0px;
+}
+.container {
+  background-color: var(--dark);
+  padding: 20px;
+  border-radius: 12px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 30px;
+}
+.icon {
+  height: 24px;
+  width: 24px;
+  margin-right: 14px;
+}
+.price-container {
+  margin-left: auto;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: flex-end;
 }
-
-.App-link {
-  color: #61dafb;
+.price {
+  font-weight: 500;
+  color: var(--light);
+  font-size: 16px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.price-change {
+  margin-top: 3px;
+}
+.price-change.danger {
+  color: var(--danger);
+}
+.price-change.success {
+  color: var(--success);
 }
